--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,63 +116,81 @@ a:hover {
 
 /* footer */
 
-  footer {
-    background-color: #666666;
+footer {
+  background-color: #666666;
+  padding: 20px;
+  width: 100%;
+  border-top: 8px solid #4aaaa5;
+  display: block;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  text-align: center;
+  font-size: 12px;
+  color: white;
+}
+
+/* media queries */
+
+@media screen and (max-width: 968px) {
+  .wrapper {
+    width: 768px;
     padding: 20px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    background-color: white;
+    clear: both;
+  }
+  #bullets {
+    width: 495px;
+    padding: 20px 0px 20px 20px;
+    background-color: #fff;
+  }
+  .wrapTop {
+    width: 768px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+
+  .wrapper {
+    width: 468px;
+    padding: 20px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    background-color: white;
+    clear: both;
+  }
+
+  .wrapTop {
     width: 100%;
-    border-top: 8px solid #4aaaa5;
-    display: block;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    text-align: center;
-    font-size: 12px;
-    color: white;
+    padding: 0px;
   }
 
-  /* media queries */
-
-  @media screen and (max-width: 968px) {
-    .wrapper {
-      width: 768px;
-      padding: 20px;
-      margin: 0 auto;
-      margin-bottom: 20px;
-      background-color: white;
-      clear: both;
-    }
-    #bullets {
-      width: 495px;
-      padding: 20px 0px 20px 20px;
-      background-color: #fff;
-    }
-    .wrapTop {
-      width: 768px;
-    }
+  #name {
+    width: 100%;
   }
 
-  @media screen and (max-width: 768px) {
-    .wrapper {
-      width: 468px;
-      padding: 20px;
-      margin: 0 auto;
-      margin-bottom: 20px;
-      background-color: white;
-      clear: both;
-    }
-    .wrapTop {
-      width: 100%;
-      padding: 0px;
-    }
-    #name {
-      width: 100%;
-    }
-    #bullets {
-      margin: 0px;
-      padding: 0px;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-    }
-    li {
-      padding: 10px;
-    }
+  #bullets {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
+
+  li {
+    padding: 10px;
+  }
+
+}
+
+@media screen and (max-width: 640px) {
+  
+  img.photo {
+    clear: all;
+    max-width: 448px;
+    max-height: 448px;
+    padding-top: 20px;
+    margin-bottom: 20px;
+  }
+
+}
